# octopus_server

./: .env  .gitignore  .ignore  Cargo.toml  Dockerfile  LICENSE  README.md  coverage.sh  docker-entrypoint.sh  frontend-start.sh  mount-nextcloud.sh  sqlx-data.json  wasp-mage-start.sh
.sqlx/: query-008f5ea2ef791bfb102040ab1d92a516caa3fcb8381076717879cdee175ad5c8.json  query-00966a4c5a07e20751dd6d096e4c1cc98bbd31d55dea32bc7be56e16a6bad7d6.json  query-00c1d74f088b273001e460a9715414f4719fe3d6c695dd86e2882c8bf197aff2.json  query-032babb220b70973c170e00d5882cfe96385cb77aefbee436acfd5610bc0cd43.json  query-04ceea61b33ee97873c48e5942f6be17bfb640ae0c24f4e588230af5ebc696e5.json  query-05440e742b2c705b6dd1e72f2eacebb4f07be7537e44b1a402c555045cb06285.json  query-0795fc581711587756e68d67c163bc318588e756c6f04a780773a6273f51743f.json  query-080591d8eb61e71c10e428c3ee8cd9851422eee4fda31dde44e57699d2d1a1fa.json  query-085771452533d5f7c1a55d1d1672d0e7a16ad822ed81a4e3d7d148b18ccc715e.json  query-08814c0dcc56509c45ba8340d0068ffa02a8c60ac03263a38989fcc1e0d0f491.json  query-0908ebb4aa1248c2a8be834b711b742f7f712ef1100d85fd19a5be656a9abfaa.json  query-0977e983778640743ebc91afc41caea71066036045ab25049455dbb4a66a4065.json  query-0aa78fd9aacb4079e781492d0162a47a02ad1748e58c239c3ce1ae9ba236602c.json  query-0ae2df192a49354d70fe01d5bb137cafc0efcfbfad7217888e19ca6c6d0510e4.json  query-0b70674b524eda8f03248a1eb8ced0e3527b528e6dd4e28512e988c728c1ee11.json  query-0be4f09eee3728bcc59d86fbb8e19faf62c216dc1dc27a223f2e0945f537cd1a.json  query-0c4354a7c88594a4faa165e16e57c336bdf78d3d9a4ba1ba1db40b36b2ce1bb6.json  query-0cfd4154cdb1c6072e5651020182aa7fddda1ec76f783aa28520f23024cecde2.json  query-0d0911c6d85eae4548c1e2ca52c83845db307f279075521e49b6951f86c0bb9c.json  query-0d2630dc8321a90ba62a63a362b8a1e2d9132c9e58b62cb316ded78d853d2815.json  query-0d3e9e0138474748417a276b55d8b63deaab3d333788ba2ec49b908d805988b0.json  query-0d862f4e182d8129dbdf1233dc72d86c681687487ee59b1d6c61fa1a83f9ca74.json  query-0da371128bf771fcdc6fd85d5ddd5c0bd38c0116396fa813f1975fb0c369e0fe.json  query-0e5401587601e9dc7b2898cdf80602f84da559b9d9c16467fd37b6390243f54a.json  query-0e70038f40c8d494e6e3f7122c564139ace00b1b6c2e1db95b36c5a5ee58202f.json  query-0f606f2ee3c85bf675f40aeece7ba782b0f19849f51b8abdbd376dee7e95a36e.json  query-10b899f76b9f6b990b0a65c0ef8aa08ca42477de4a353ab38f9963c5c72367d6.json  query-114f739b0a7e623abcd8c7ed3b58acc1787b9f4e9a44430e623dddd16259a82e.json  query-127b1b1b15b91f295a5097f84430331600aa44678abaa6ebc909272e741f9358.json  query-1298039476ff3e9a294de672dcd39331e95ac991d72df1aeb3a10fa92e480421.json  query-12d0141571cb4755aecba45bfbb2895bc58d4573cd55a14d72163af5456bbbc4.json  query-139ae31dea0216a48b8231a9e35d9788ad719adc6254084cb3c966f627125b4f.json  query-13bc07169a7ebc562c491c30d5484d43eb54e0745eda7f94583352619615a1e4.json  query-15375f85d73c37e4077d080137a11f695806b1b55bfef70c8d11c493bf009983.json  query-15c117a6820eadd18fb02c11fc5cf3c6ccadad9f24a95cbcdaa25a0e9fafee5e.json  query-16f2722914f3fd69658d1073516d1edeb7e9ff9db94b9b2ecf49dd87fde078a7.json  query-18046545750d98da310a67ee8653a090f9bc4600fcbd677c5816f33d6c05fd1b.json  query-1931838d5ee7086046da698f34a7041226a7a92c1a60e0b12a124358153398d9.json  query-193b19a652d0967a0475f85a9dacebdc06bc059b2a94109170df6536771618ab.json  query-1a49e98b513b7400babc23d3f871fa32dad33a1a7b432fb37f7e7ff641a730f6.json  (+431 more)
crates/tokio-tungstenite/: Cargo.toml
data/: backup_database.sh  backup_public.sh  install.sh  nvidia.sh  old_install.sh  update.sh
data/test/: proxy-client.html  test.html  test.py
doc/: docker_compose.md  for_developers.md  kubernetes.md  postgresql.md  process_manager.md
migrations/: 20230630073639_initial.sql  20230817093713_chat_audits.sql  20230825093018_alter_ai_functions.sql  20230828125612_alter_chat_messages.sql  20230830072707_alter_chat_messages.sql  20230906060525_alter_ai_functions.sql  20230906060525_v0.3.sql  20230913072315_v0.2_alter_chat_messages.sql  20230913082315_v0.3.sql  20230920063338_v0.2_alter_chat_messages.sql  20230920091406_v0.2_create_table_inspection_disablings.sql  20230921091406_v0.3.sql  20231003143410_v0.3_alter_chat_messages.sql  20231127102723_v0.4.sql  20231205125144_v0.4_create_table_parameters.sql  20231214141553_v0.5.sql  20240207082907_v0.5_alter_ai_functions_response_content_types.sql.sql  20240212122439_v0.5_alter_ai_services.sql  20240219152142_v0.5_alter_wasp_apps.sql  20240222145525_v0.5_alter_ai_functions_response_content_types.sql  20240307114148_v0.5_alter_chat_message_files.sql  20240321121503_v0.7.sql  20240419081131_v0.7_alter_wasp_generators.sql  20240423071558_v0.8.sql  20240430121837_v0.8_create_table_nextcloud_files.sql  20240503074528_v0.8_alter_ai_functions_response_content_types.sql  20240507125508_v0.8_alter_ai_functions.sql  20240515103358_v0.8_alter_tables.sql  20240527083333_v0.9.sql  20240605134839_v0.8_alter_wasp_generators.sql  20240605142245_v0.8_alter_chat_messages.sql  20240606142245_v0.9.sql  20240607131815_v0.9_alter_wasp_apps_instance_types.sql  20240618121556_v0.9_alter_companies.sql  20240619102706_v0.9_create_table_files.sql  20240626121438_v0.9_alter_ai_services_statuses.sql  20240703145001_v0.9_update_users.sql  20240710150838_v0.9_alter_companies.sql  20240711104958_v0.9_create_table_kvs.sql  20240718122216_v0.9_update_parameters.sql  (+12 more)
selenium/: supervisord.conf
src/: ai_request.rs  app.rs  canon.rs  config.rs  context.rs  database.rs  email_service.rs  entity.rs  error.rs  lib.rs  main.rs  multipart.rs  scraper.rs  server_resources.rs  session.rs  util.rs
src/ai/: anthropic.rs  code_tools.rs  function_bar_async.rs  function_call.rs  function_find_part.rs  function_foo_sync.rs  function_orbit_camera.rs  function_text_to_image.rs  function_translator.rs  function_visual_questions_answering.rs  generator.rs  internal_function_call.rs  mod.rs  ollama.rs  open_ai.rs  service.rs  tasks.rs
src/api/: mod.rs
src/internal_functions/: ai_service_generators.rs  files.rs  markdown_converter.rs  mod.rs
src/ollama/: mod.rs  proxy.rs
src/parser/: addons.rs  (+5 more)
wasp_mage/: README.md  main.wasp
(+103 files in other folders)
