[package]
name = "octopus_server"
version = "0.9.40"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = [
    "std"
] }
async-openai = { version = "0.24.0", default-features = false, features = [
    "rustls"
] }
async-recursion = "1.1.1"
axum = { version = "0.7.5", default-features = false, features = [
    "http1",
    "json",
    "matched-path",
    "multipart",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "ws"
] }
axum-extra = { version = "0.9.3", default-features = false, features = [
    "typed-header"
] }
axum-macros = "0.4.1"
base64 = { version = "0.22.1", default-features = false, features = [
    "std"
] }
bytesize = "1.3.0"
clap = { version = "4.5.16", default-features = false, features = [
    "derive",
    "env",
    "help",
    "std"
] }
chrono = { version = "0.4.38", default-features = false, features = [
    "serde"
] }
diff = "0.1.13"
fake = { version = "2.9.2", default-features = false }
fantoccini = { version = "0.21.0", default-features = false, features = [
    "rustls-tls"
] }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std"
] }
hex = "0.4.3"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
infer = "0.16.0"
mime = "0.3.17"
num_cpus = "1.16.0"
port-selector = "0.1.6"
rand = { version = "0.8.5", default-features = false, features = [
    "std"
] }
rand_core = { version = "0.6.4", default-features = false, features = [
    "std"
] }
regex = { version = "1.10.6", default-features = false, features = [
    "std"
] }
reqwest = { version = "0.12.7", default-features = false, features = [
    "json"
] }
rev_buf_reader = "0.3.0"
serde = { version = "1.0.209", default-features = false, features = [
    "derive"
] }
serde_json = "1.0.127"
sha3 = { version = "0.10.8", default-features = false, features = [
    "std"
] }
sqlx = { version = "0.8.1", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
strum_macros = "0.26.4"
systemstat = "0.2.3"
tempfile = "3.12.0"
tokio = { version = "1.39.3", default-features = false, features = [
    "rt-multi-thread",
    "time"
] }
tokio-cron-scheduler = { version = "0.11.0", default-features = false }
tokio-tungstenite = { path = "crates/tokio-tungstenite" }
tower = { version = "0.5.0", default-features = false, features = [
    "timeout",
    "util"
] }
tower-http = { version = "0.5.2", default-features = false, features = [
    "add-extension",
    "cors",
    "fs",
    "limit",
    "trace",
] }
tracing = { version = "0.1.40", default-features = false, features = [
    "std"
] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt"
] }
utoipa = { version = "4.2.3", default-features = false, features = [
    "axum_extras",
    "chrono",
    "uuid"
] }
utoipa-swagger-ui = { version = "7.1.0", default-features = false, features = [
    "axum"
] }
uuid = { version = "1.10.0", default-features = false, features = [
    "serde",
    "v4"
] }
walkdir = "2.5.0"
validator = { version = "0.18.1", default-features = false, features = [
    "derive"
] }
zip = { version = "2.2.0", default-features = false, features = [
    "deflate"
] }

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
