[package]
name = "octopus_server"
version = "0.10.25"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5", default-features = false, features = [
    "std"
] }
async-openai = { version = "0.28", default-features = false, features = [
    "rustls"
] }
async-recursion = "1.1"
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "matched-path",
    "multipart",
    "query",
    "tokio",
    "tower-log",
    "tracing",
    "ws"
] }
axum-extra = { version = "0.10", default-features = false, features = [
    "tracing",
    "typed-header"
] }
axum-macros = "0.5"
base64 = { version = "0.22", default-features = false, features = [
    "std"
] }
bytesize = "2.0"
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "env",
    "help",
    "std"
] }
chrono = { version = "0.4", default-features = false, features = [
    "serde"
] }
crowbook = { version = "0.16", default-features = false, features = [
    "syntect"
] }
diff = "0.1"
fake = { version = "4.0", default-features = false }
fantoccini = { version = "0.21", default-features = false, features = [
    "rustls-tls"
] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std"
] }
hex = "0.4"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["full"] }
infer = "0.19"
mime = "0.3"
num_cpus = "1.16"
port-selector = "0.1"
rand = { version = "0.8", default-features = false, features = [
    "std"
] }
rand_core = { version = "0.6", default-features = false, features = [
    "std"
] }
regex = { version = "1.11", default-features = false, features = [
    "std"
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json"
] }
rev_buf_reader = "0.3"
serde = { version = "1.0", default-features = false, features = [
    "derive"
] }
serde_json = "1.0"
sha3 = { version = "0.10", default-features = false, features = [
    "std"
] }
sqlx = { version = "0.8", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
strum_macros = "0.27"
systemstat = "0.2"
tempfile = "3.18"
tokio = { version = "1.44", default-features = false, features = [
    "rt-multi-thread",
    "time"
] }
tokio-cron-scheduler = { version = "0.13", default-features = false }
tokio-tungstenite = { path = "crates/tokio-tungstenite" }
tower = { version = "0.5", default-features = false, features = [
    "timeout",
    "util"
] }
tower-http = { version = "0.6", default-features = false, features = [
    "add-extension",
    "cors",
    "fs",
    "limit",
    "trace",
] }
tracing = { version = "0.1", default-features = false, features = [
    "std"
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt"
] }
utoipa = { version = "5.3", default-features = false, features = [
    "axum_extras",
    "chrono",
    "uuid"
] }
utoipa-swagger-ui = { version = "9.0", default-features = false, features = [
    "axum"
] }
uuid = { version = "1.15", default-features = false, features = [
    "serde",
    "v4"
] }
walkdir = "2.5"
validator = { version = "0.20", default-features = false, features = [
    "derive"
] }
zip = { version = "2.2", default-features = false, features = [
    "deflate"
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
